# ai-daily-podcast

./: .gitignore  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: generate_podcast.yml
prompts/google/gemini-2.0-pro/: podcast_script.txt
prompts/google/gemini-2.0-pro-exp-02-05/: podcast_script.txt
prompts/groq/deepseek-r1-distill-llama-70b/: podcast_script.txt
prompts/nvidia/llama-3-1-nemotron-70b-instruct/: crawler_instructions.txt  podcast_script.txt
resources/: daily-podcast-explained.excalidraw
src/: __main__.py  main.py
src/crawler/: __init__.py  crawler.py  extract_schema.py
src/filtering/: __init__.py
src/llm/: __init__.py
src/search/: __init__.py
src/search/model/: extract_schema.py  source.py
src/sumariser/: __init__.py
src/tool/: __init__.py  date.py  pydantic.py  wraps.py
src/voice/: __init__.py
tests/: test_crawler.py
